refactor(quiz): rename question rounds
